@@ -16,6 +16,7 @@
 type !'a t
 
 external make : 'a -> 'a t = "%makemutable"
+external make_contended : 'a -> 'a t = "caml_atomic_make_contended"
 external get : 'a t -> 'a = "%atomic_load"
 external exchange : 'a t -> 'a -> 'a = "%atomic_exchange"
 external compare_and_set : 'a t -> 'a -> 'a -> bool = "%atomic_cas"
@@ -33,6 +34,7 @@ external ignore : 'a -> unit = "%ignore"
 type 'a t = {mutable v: 'a}
 
 let make v = {v}
+let make_contended = make
 let get r = r.v
 let set r v = r.v <- v
 
